feat(back);gestion-des-consommables (#20)
* feat(back);gestion-des-consommables;

* feat(back);gestion-des-consommables (swagger + test)
