# back/src/dto/create-consumable.dto.ts
@@ -1,0 +1,17 @@
+import { IsInt, IsNotEmpty, IsPositive, IsString } from 'class-validator';
+
+export class CreateConsumableDto {
+    @IsString()
+    @IsNotEmpty()
+    name: string;
+
+    @IsInt()
+    @IsPositive()
+    consumableTypeId: number;
+
+    @IsInt()
+    quantity: number;
+
+    @IsInt()
+    cost: number;
+}
