# back/src/dto/purchase-consumable.dto.ts
@@ -1,0 +1,6 @@
+import { IsInt } from 'class-validator';
+
+export class PurchaseConsumableDto {
+    @IsInt()
+    quantity!: number;
+}
