# back/src/dto/update-consumable.dto.ts
@@ -1,0 +1,20 @@
+import {IsInt, IsOptional, IsPositive, IsString} from 'class-validator';
+
+export class UpdateConsumableDto {
+    @IsOptional()
+    @IsString()
+    name?: string;
+
+    @IsOptional()
+    @IsPositive()
+    consumableTypeId?: number;
+
+    @IsOptional()
+    @IsInt()
+    @IsPositive()
+    quantity?: number;
+
+    @IsOptional()
+    @IsInt()
+    cost?: number;
+}
